--- a/todo
+++ b/todo
@@ -3,3 +3,4 @@
 * persist search state
 * convert user_ids to Twitterers before commencing work, include in logging
 * switch to Akka logging, consider using Typesafe config library
+* figure out an orderly shutdown
